# MPI

./: README.md  pyproject.toml
app/: parser.py
